# codestarter

./: README.md  firestarter.json  pyproject.toml
src/firestarter/: cli.py  executor.py  utils.py
src/firestarter/dependency_resolvers/: __init__.py  requirements_resolver.py  utils.py
src/firestarter/file/: __init__.py  local.py  utils.py
